--- a/index.html
+++ b/index.html
@@ -14,18 +14,27 @@
                 <img src="img/logo.png" alt="logo" />
             </div>
         </header>
-
         <div class="cds-container container">
             <!-- Disco ad esempio -->
-            <div class="cd">
+            <!-- <div class="cd">
                 <img src="https://upload.wikimedia.org/wikipedia/en/9/9f/Ten_Summoner%27s_Tales.jpg" alt="">
                 <h3>Ten's Summoners Tales</h3>
                 <span class="author">Sting</span>
                 <span class="year">1993</span>
-            </div>
+            </div> -->
         </div>
 
-
+        <script id="entry-template" type="text/x-handlebars-template">
+            <!-- <div class="cds-container container"> -->
+                <!-- Disco ad esempio -->
+                <div class="cd">
+                    <img src="{{poster}}" alt="">
+                    <h3>{{title}}</h3>
+                    <span class="author">{{author}}</span>
+                    <span class="year">{{year}}</span>
+                </div>
+            <!-- </div>     -->
+        </script>
         <script src="main.js" charset="utf-8"></script>
     </body>
 </html>
