workingprogress esercizio bonus

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <script id="entry-template" type="text/x-handlebars-template">
 
-                <div class="cd {{genre}}">
+                <div class="cd {{classe}}">
                     <img src="{{poster}}" alt="">
                     <h3>{{title}}</h3>
                     <span class="author">{{author}}</span>
