levato il prompt e messo l input per effettuare la ricerca

--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <header>
+        <header class="left">
             <div class="container">
                 <img src="img/logo.png" alt="logo" />
+            </div>
+            <div class="input-container">
+                <input type="text" name="" value="">
             </div>
         </header>
         <div class="cds-container container">
@@ -25,7 +28,7 @@
                     <h3>{{title}}</h3>
                     <span class="author">{{author}}</span>
                     <span class="year">{{year}}</span>
-                    <span class="year">{{genre}}</span>
+                    <span class="genre">{{genre}}</span>
                 </div>
 
         </script>
